--- a/docker/ops/ansible_project/site.yml
+++ b/docker/ops/ansible_project/site.yml
@@ -1,8 +1,16 @@
 ---
 
 - hosts: webservers
-  roles:
-    - common
-    - webserver
+  tasks:
+    - name: sum module
+      sum:
+        num: 10
+      register: sum_result
+
+    - debug: var=sum_result.sum
+      when: sum_result.sum > 100
+#  roles:
+#    - common
+#    - webserver
 
 ...
